--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset = "UTF-8">
     <title>page</title>
     <link rel="icon" href="/Kr.png">
-    <h1 align = center>ПРИВЕТ</h1>
+  
   <script src = "libs/gsap/gsap.min.js" defer></script>
   <script src = "libs/gsap/ScrollTrigger.min.js" defer></script>
   <script src = "libs/gsap/ScrollSmoother.min.js" defer></script>
@@ -16,7 +16,7 @@
 </head>
 <body>
   
-  <div id = "conection">
+  <div id = "conection" align = center>
     <div id = "name">Крис</div>
     <div id = "achiv">Начинающий программист. Фотограф.</div>
     <div id = "location">Владивосток. Хабаровск.</div>
@@ -25,9 +25,13 @@
     </div>
   </div>
 
-  <header class = "TheBossOfPic">
-    <img src = "" alt = "alt">
-  </header>
-  
+  <div class = "Button" style = "";>
+    <a href = "https://vk.com/krissspik" title="VK">
+      <img scr = "~\www\kristied.ru\images\vk.png" height="50px" alt = "VK">
+    </a>
+    <a href = "https://t.me/SEyeziii" title="Telegram">
+      <img scr = "~\www\kristied.ru\images\tg.png" height="50px" alt = "TG">
+    </a>
+  </div>
 
 </body>
