--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
   <div class = "Button" style = "";>
     <a href = "https://vk.com/krissspik" title="VK">
-      <img scr = "~\www\kristied.ru\images\vk.png" height="50px" alt = "VK">
+      <img src = "~\www\kristied.ru\images\vk.png" height="50px" alt = "VK">
     </a>
     <a href = "https://t.me/SEyeziii" title="Telegram">
-      <img scr = "~\www\kristied.ru\images\tg.png" height="50px" alt = "TG">
+      <img src = "~\www\kristied.ru\images\tg.png" height="50px" alt = "TG">
     </a>
   </div>
 
