--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   
-  <div id = "conection" align = center>
+  <div class = "text" id = "conection" align = center>
     <div id = "name">Крис</div>
     <div id = "achiv">Начинающий программист. Фотограф.</div>
     <div id = "location">Владивосток. Хабаровск.</div>
